--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <tr>
         <td><img src="images/fuangcircle.png" alt="สุจิรา สัตถาผล" height="300px"></td>
         <td><h1>Sujira Sattapol</h1>
-        <a href="Contact.html">Contact</a>
+        <a href="E:\สุจิรา\HTML\Contact.htmlContact.html">Contact</a>
         <p>I study at <em><strong>Thatnaraiwittaya school</strong></em></p>
         <p>My nickname is Fuang</p></td>
       </tr>
