--- a/Contact.html
+++ b/Contact.html
@@ -25,7 +25,7 @@
     <br>
     <hr size="15" width="100%" color = "pink" noshade>
     <br>
-    <a href="E:\สุจิรา\HTML\index.html">Profile</a>
+    <a href="index.html">Profile</a>
 <footer></footer>
 </html>
 
