--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <ol>
       <li>play games</li>
       <li>listen to the ghost ladio</li>
-      <li><a href="https://store.steampowered.com/app/322330/Dont_Starve_Together/">Don't starve</a></li>
+      <li><a href="https://store.steampowered.com/app/322330/Dont_Starve_Together/" target="_blank">Don't starve</a></li>
       <li>watch movie</li>
     </ol>
     <br>
