--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <ol>
       <li>play games</li>
       <li>listen to the ghost ladio</li>
-      <li><a href="https://store.steampowered.com/app/322330/Dont_Starve_Together/" target="_blank">คืนพุธมุดผ้าห่ม</a></li>
+      <li><a href="https://youtu.be/w8gL29Kz48c" target="_blank">คืนพุธมุดผ้าห่ม</a></li>
       <li>watch movie</li>
     </ol>
     <br>
