--- a/Contact.html
+++ b/Contact.html
@@ -6,6 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>🦕Contact to Sujira CV🦖</title>
   </head>
+  
+    <body style="background-color: rgb(253, 236, 249);">
+    <div align="center">
+        <h2><a href="Index.html">Home<a>
+        <a href="Contact.html">Contact</a></h2>
+      </div>
+    <hr>
+    <div align="center">
+    <table cellpadding="25px">
+      <tr>
+        <td><img src="images/fuangcircle.png" alt="สุจิรา สัตถาผล" height="300px"></td>
+        <td><h1 style="color:#ff85a2;">Sujira Sattapol</h1>
+        <p>I study at <em><strong>Thatnaraiwittaya school</strong></em></p>
+        <p>My nickname is Fuang</p></td>
+      </tr>
+    </table>
+    </div>
+  
   <body>
     <h1>Contact</h1>
     <p>Facebook : Fuang Sujira</p>
