--- a/Contact.html
+++ b/Contact.html
@@ -9,7 +9,7 @@
   
     <body style="background-color: rgb(253, 236, 249);">
     <div align="center">
-        <h2><a href="Index.html">Home<a>
+        <h2><a href="index.html">Home<a>
         <a href="Contact.html">Contact</a></h2>
       </div>
     <hr>
