--- a/Contact.html
+++ b/Contact.html
@@ -1,47 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>🦕Contact to Sujira CV🦖</title>
-  </head>
-  
-    <body style="background-color: rgb(253, 236, 249);">
     <div align="center">
-        <h2><a href="index.html">Home<a>
-        <a href="Contact.html">Contact</a></h2>
-      </div>
-    <hr>
-    <div align="center">
+      <h2><a href="Index.html">Profile</a></h2>
+      <h1 style="color:#ff85a2;">Contact</h1>
     <table cellpadding="25px">
       <tr>
-        <td><img src="images/fuangcircle.png" alt="สุจิรา สัตถาผล" height="200px"></td>
+        <td><img src="images/fuangcircle.png" alt="สุจิรา สัตถาผล" height="300px"></td>
         <td><h1 style="color:#ff85a2;">Sujira Sattapol</h1>
         <p>I study at <em><strong>Thatnaraiwittaya school</strong></em></p>
         <p>My nickname is Fuang</p></td>
       </tr>
     </table>
-    </div>
-  
+
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>🦕Contact to Sujira CV🦖</title>
+  </head>
   <body>
-    <h1>Contact</h1>
     <p>Facebook : Fuang Sujira</p>
     <p>IG : _.sujira</p>
     <p>E-mail : 23652@tnw.ac.th</p>
     <p>Tel. : 0953156138</p>
     <br>
-        <form action="index.html" method="post">
-        <label for="Yourname">Yourname:</label>
-        <input type="text" name="Yourname"><br>
-        <label for="Your Email">Your Email:</label>
-        <input type="email" name="Your E-mail" id=""><br>
-        <label for="your massage">Your massage</label>
-        <textarea name="your massage" id="" colos="30" raws="10"></textarea>
-        <input type="submit">
-        </form>
+    <form action="index.html" method="post"></form>
+    <table>
+      <tr>
+        <td><label for="Yourname">Yourname:</label></form></td>
+        <td><input type="text" name="Yourname"></td>
+      </tr>
+      <tr>
+        <td><label for="Your Email">Your Email:</label></td>
+        <td><input type="email" name="Your E-mail" id=""></td>
+      </tr>
+      <tr>
+        <td valing="top"><label for="your massage">Your massage</label></td>
+        <td><textarea name="your massage" id="" colos="30" raws="10"></textarea></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td><input type="submit"></td>
+      </tr>
+      </table>
+    </form>
     <br>
-    <hr size="15" width="100%" color = "pink" noshade>
+    <hr>
     <br>
 <footer></footer>
 </html>
