--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 
   <body>
     <div align="center" class="divcl">
-      <a href="index.html">Home</a>
+      <h2><a href="index.html">Home</a>
       <a href="contact.html">Contact</a>
+      </h2>
     
     </div>
     <hr>
@@ -37,7 +38,7 @@
     </table>
     </div>
 
-    <hr />
+    <hr>
 
   <div align="center">
     <!-- ================Movie and Music================== -->
